--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,4 +7,10 @@
 
 body{
     font-family: "Poppins", sans-serif;
+
+}
+html, body {
+  min-height: 100%;
+  background-color: #0f172a;
+  font-family: "Poppins", sans-serif;
 }
